--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,3 +16,16 @@
     font-weight: 700;
     font-style: normal;
 }
+
+.registerpage{
+    background-image: url("../public/images/HomePageBG.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100vh; /* Set height to full viewport */
+    width: 100vw; /* Optional: Set width to full viewport */
+    padding: 20px;
+}
+
+.register-components{
+    margin-top: 100px;
+}
